fix(tooltip): Show tooltips above the input on mobile mozilla/fxa-content-server#6195) r=@vladikoff
Tooltips can be obscured by a phone's virtual keyboard.
To avoid hidden tooltips, show tooltips above the
input element on mobile phones.

The check for mobile is rudimentary, the screen
size is checked. If it's width or height is smaller
than the breakpoints used in the CSS, consider
the user on a mobile device.

fixes mozilla/fxa-content-server#6188

--- a/packages/fxa-content-server/app/styles/modules/_tooltip.scss
+++ b/packages/fxa-content-server/app/styles/modules/_tooltip.scss
@@ -96,7 +96,7 @@
  * these are caret's attached to tooltips that hang below the
  * input element. The tooltip's top is set via JS.
  */
-html[dir='rtl'] .tooltip-below::before,
-.tooltip-below::before {
+html[dir='rtl'] .tooltip.tooltip-below::before,
+.tooltip.tooltip-below::before {
   top: -7px;
 }
